--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="@color/white"
     android:padding="5dp">
@@ -21,10 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:autoSizeTextType="uniform"
             android:gravity="center"
             android:paddingBottom="5dp"
-            android:text="Title"
+            android:text="@string/title"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/course_title"
             android:textStyle="bold"
@@ -38,7 +37,7 @@
             android:layout_below="@+id/titleTextView"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:text="Start DAte" />
+            android:text="@string/start_date" />
 
         <TextView
             android:id="@+id/endTextView"
@@ -48,7 +47,7 @@
             android:layout_below="@+id/dashText"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:text="End Date" />
+            android:text="@string/end_date" />
 
         <TextView
             android:id="@+id/dashText"
@@ -57,7 +56,7 @@
             android:layout_below="@+id/startTextView"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:text=" - " />
+            android:text="@string/dash" />
 
         <TextView
             android:id="@+id/extraTextView"
@@ -68,7 +67,7 @@
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:text="Extra"
+            android:text="@string/extra"
             android:textStyle="bold" />
 
     </RelativeLayout>
