--- a/app/src/main/res/layout/fragment_assessment_detail.xml
+++ b/app/src/main/res/layout/fragment_assessment_detail.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="8dp"
     android:background="@color/white"
-    tools:context=".ui.DetailFragment">
+    tools:context=".ui.TermDetailFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@color/white"
         android:elevation="5dp"
@@ -30,27 +30,19 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/termStartTextView"
+            android:id="@+id/goal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/termTitleTextView"
+            android:text="Goal:"
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/goalTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/termTitleTextView"
-            android:layout_centerHorizontal="true"
-            android:text="@string/dash"
-            android:textSize="22sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/termEndTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/termTitleTextView"
+            android:layout_toEndOf="@+id/goal"
             android:textSize="18sp" />
 
         <ImageView
@@ -59,10 +51,46 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
+            android:contentDescription="@string/delete_term_desc"
             android:paddingTop="3dp"
             android:src="@android:drawable/ic_menu_delete"
-            android:contentDescription="@string/delete_term_desc"
             android:tint="@android:color/holo_red_light" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/goal">
+
+            <TextView
+                android:id="@+id/type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Type:" />
+
+            <TextView
+                android:id="@+id/typeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/type" />
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/type"
+                android:text="Status:" />
+
+            <TextView
+                android:id="@+id/statusTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/type"
+                android:layout_toEndOf="@+id/status"
+                android:text="INACTIVE" />
+
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
