--- a/app/src/main/res/layout/assessment_grid_item.xml
+++ b/app/src/main/res/layout/assessment_grid_item.xml
@@ -31,44 +31,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/startTextView"
+            android:id="@+id/goal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/titleTextView"
+            android:gravity="center"
+            android:text="@string/goal_date" />
+
+        <TextView
+            android:id="@+id/goalTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/titleTextView"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="@string/start_date" />
-
-        <TextView
-            android:id="@+id/endTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/dashText"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="@string/end_date" />
-
-        <TextView
-            android:id="@+id/dashText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/startTextView"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="@string/dash" />
-
-        <TextView
-            android:id="@+id/extraTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/endTextView"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:text="@string/extra"
-            android:textStyle="bold" />
+            android:layout_toEndOf="@+id/goal" />
 
     </RelativeLayout>
 
