--- a/app/src/main/res/layout/associated_item.xml
+++ b/app/src/main/res/layout/associated_item.xml
@@ -2,22 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/associatedTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:textColor="@color/textPrimary" />
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/associatedStatusTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:textColor="@color/textPrimary" />
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
