--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#002B4F</color>
+    <color name="colorPrimaryDark">#002441</color>
+    <color name="colorAccent">#B88C18</color> <!--B18101-->
     <color name="white">#ffffff</color>
     <color name="offWhite">#efefef</color>
+    <color name="textAdded">#a0a0a0</color>
     <color name="textSecondary">#909090</color>
-    <color name="textPrimary">#303030</color>
+    <color name="textPrimary">#505050</color>
 </resources>
