--- a/app/src/main/res/layout/fragment_course_detail.xml
+++ b/app/src/main/res/layout/fragment_course_detail.xml
@@ -16,7 +16,7 @@
         android:padding="10dp">
 
         <TextView
-            android:id="@+id/termTitleTextView"
+            android:id="@+id/courseTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -30,34 +30,34 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/termStartTextView"
+            android:id="@+id/courseStartTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/termTitleTextView"
+            android:layout_below="@+id/courseTitleTextView"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/alertStartTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/termStartTextView"
+            android:layout_below="@+id/courseStartTextView"
             android:textSize="18sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/termTitleTextView"
+            android:layout_below="@+id/courseTitleTextView"
             android:layout_centerHorizontal="true"
             android:text="@string/dash"
             android:textSize="22sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/termEndTextView"
+            android:id="@+id/courseEndTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/termTitleTextView"
+            android:layout_below="@+id/courseTitleTextView"
             android:textSize="18sp" />
 
         <TextView
@@ -65,8 +65,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/termEndTextView"
+            android:layout_below="@+id/courseEndTextView"
             android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/deleteAssessmentImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/courseTitleTextView"
+            android:layout_toStartOf="@+id/deleteTermImageView"
+            android:contentDescription="@string/delete_term_desc"
+            android:padding="5dp"
+            android:src="@drawable/ic_edit_black_24dp" />
 
         <ImageView
             android:id="@+id/deleteTermImageView"
@@ -74,10 +84,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:paddingTop="3dp"
-            android:src="@android:drawable/ic_menu_delete"
             android:contentDescription="@string/delete_term_desc"
-            android:tint="@android:color/holo_red_light" />
+            android:padding="5dp"
+            android:src="@drawable/ic_delete_forever_black_24dp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -85,9 +94,10 @@
             android:layout_below="@+id/alertStartTextView">
 
             <TextView
-                android:id="@+id/type"
+                android:id="@+id/typeSpan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Mentor:" />
 
             <TextView
@@ -95,21 +105,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/type"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/typeSpan"
                 android:text="my ment" />
 
             <TextView
                 android:id="@+id/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/type"
+                android:layout_below="@+id/mentorTextView"
                 android:text="Status:" />
 
             <TextView
                 android:id="@+id/statusTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/type"
+                android:layout_alignTop="@+id/status"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="3dp"
                 android:layout_toEndOf="@+id/status"
                 android:text="INACTIVE" />
 
@@ -117,15 +132,29 @@
                 android:id="@+id/notes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/status"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/statusTextView"
+                android:layout_centerVertical="true"
                 android:text="Notes:" />
 
             <TextView
                 android:id="@+id/notesTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/notes"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/share"
                 android:text="This is a really long note. This note is meant for you to see what long notes look like in a text box" />
+
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/status"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/notes"
+                android:src="@drawable/share" />
 
 
         </RelativeLayout>
