--- a/app/src/main/res/layout/assessment_grid_item.xml
+++ b/app/src/main/res/layout/assessment_grid_item.xml
@@ -40,7 +40,7 @@
             android:text="@string/goal_date" />
 
         <TextView
-            android:id="@+id/goalTextView"
+            android:id="@+id/typeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/titleTextView"
