--- a/app/src/main/res/layout/fragment_add_assessment.xml
+++ b/app/src/main/res/layout/fragment_add_assessment.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.AddTermFragment">
 
     <android.support.v4.widget.NestedScrollView
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -56,6 +57,7 @@
                     android:id="@+id/typeSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
                     android:layout_toEndOf="@+id/typeSpan"
                     android:inputType="text" />
 
@@ -63,8 +65,8 @@
                     android:id="@+id/goalSpan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@id/typeSpinner"
+                    android:layout_alignStart="@+id/typeSpan"
+                    android:layout_below="@+id/typeSpinner"
                     android:text="@string/goal_date"
                     android:textSize="@dimen/standard_text_size" />
 
@@ -72,11 +74,13 @@
                     android:id="@+id/goalDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/typeSpinner"
+                    android:layout_alignTop="@+id/goalSpan"
                     android:layout_toEndOf="@+id/goalSpan"
                     android:paddingEnd="3dp"
                     android:paddingStart="3dp"
-                    android:text="@string/select_a_date" />
+                    android:text="@string/select_a_date"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
@@ -94,7 +98,8 @@
                     android:id="@+id/cancelButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_toStartOf="@+id/saveButton"
                     android:background="@color/white"
                     android:text="@string/cancel"
                     android:textColor="@color/textPrimary" />
@@ -103,7 +108,8 @@
                     android:id="@+id/saveButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/cancelButton"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
                     android:background="@color/colorAccent"
                     android:text="@string/save"
                     android:textColor="@color/white"
