--- a/app/src/main/res/layout/fragment_add_course.xml
+++ b/app/src/main/res/layout/fragment_add_course.xml
@@ -61,15 +61,16 @@
                     android:layout_toEndOf="@+id/startSpan"
                     android:paddingEnd="3dp"
                     android:paddingStart="3dp"
-                    android:text="@string/select_a_date" />
+                    android:text="@string/select_a_date"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/endSpan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/endDate"
-                    android:paddingEnd="3dp"
-                    android:paddingStart="3dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/startSpan"
                     android:text="@string/end_date"
                     android:textSize="@dimen/standard_text_size" />
 
@@ -77,8 +78,11 @@
                     android:id="@+id/endDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:text="@string/select_a_date" />
+                    android:layout_below="@+id/startSpan"
+                    android:layout_toEndOf="@+id/startSpan"
+                    android:text="@string/select_a_date"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
@@ -106,7 +110,9 @@
                     android:layout_toEndOf="@+id/startAlertSpan"
                     android:paddingEnd="3dp"
                     android:paddingStart="3dp"
-                    android:text="@string/select_a_date" />
+                    android:text="@string/select_a_date"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/endAlertSpan"
@@ -123,7 +129,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/startAlertSpan"
                     android:layout_toEndOf="@+id/startAlertSpan"
-                    android:text="@string/select_a_date" />
+                    android:text="@string/select_a_date"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
@@ -146,11 +154,12 @@
                     android:id="@+id/typeSpinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
                     android:layout_toEndOf="@+id/statusSpan"
                     android:inputType="text" />
 
                 <TextView
-                    android:id="@+id/mentorSpan"
+                    android:id="@+id/typeSpan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
@@ -162,7 +171,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/typeSpinner"
-                    android:layout_toEndOf="@+id/mentorSpan"
+                    android:layout_marginBottom="5dp"
+                    android:layout_toEndOf="@+id/typeSpan"
                     android:inputType="text" />
 
                 <TextView
