--- a/app/src/main/res/layout/fragment_add_term.xml
+++ b/app/src/main/res/layout/fragment_add_term.xml
@@ -57,15 +57,16 @@
                 android:layout_toEndOf="@+id/startSpan"
                 android:paddingEnd="3dp"
                 android:paddingStart="3dp"
-                android:text="@string/select_a_date" />
+                android:text="@string/select_a_date"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/endSpan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@+id/endDate"
-                android:paddingEnd="3dp"
-                android:paddingStart="3dp"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/startSpan"
                 android:text="@string/end_date"
                 android:textSize="@dimen/standard_text_size" />
 
@@ -73,8 +74,11 @@
                 android:id="@+id/endDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:text="@string/select_a_date" />
+                android:layout_below="@+id/startSpan"
+                android:layout_toEndOf="@+id/startSpan"
+                android:text="@string/select_a_date"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp" />
 
         </RelativeLayout>
 
