--- a/app/src/main/res/layout/associate_layout.xml
+++ b/app/src/main/res/layout/associate_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_below="@+id/datesLayout"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="5dp">
 
     <TextView
